fix: modal footer gap

--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -47,9 +47,7 @@
 }
 
 .zpl-modal-footer-container {
-  > div {
-    @apply flex items-center gap-xs;
-  }
+  @apply flex items-center gap-xs;
 
   &.left {
     @apply mr-auto;
